<resources>
    <string name="app_name">Curriculum Vitae V2</string>
    <string name="title_text">Your Resume</string>
    <string name="add_exp">Add Experience</string>
    <string name="add_edu">Add Education</string>
    <string name="full_name">Full name</string>
    <string name="my_career">My Career</string>
    <string name="your_career">Your Career</string>
    <string name="image">image</string>
    <string name="Email">Email</string>
    <string name="Skills">Skills</string>
    <string name="Language">Language</string>
    <string name="Hobbies">Hobbies</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Age">Age</string>
    <string name="Female">Female</string>
    <string name="submit">Submit</string>
    <string name="title1">Create your resume</string>
    <string name="title2">Your resume</string>
    <string name="games">Games</string>
    <string name="sport">Sport</string>
    <string name="music">Music</string>
    <string name="Android">Android</string>
    <string name="iOS">iOS</string>
    <string name="Flutter">Flutter</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="borderImg">Border image</string>
    <string name="info_title">About</string>
    <string name="you_can_contact_me_via_my_email">You can contact me via my email :</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="remember_me">Remember Me ?</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_prompt">Are you sure you want to logout ?</string>
    <string name="edu_prompt">Are you sure you want to delete this education ?</string>
    <string name="exp_prompt">Are you sure you want to delete this experience ?</string>
    <string name="del_exp_title">Delete Experience</string>
    <string name="del_edu_title">Delete Education</string>
    <string name="delete">delete</string>
    <string name="save">Save</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="university_address">University Address</string>
    <string name="university_name">University Name</string>
</resources>